--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
        "version": "0.2",
        "description": "Highlights subversive accounts on X.",
        "permissions": ["activeTab", "storage"],
-       "host_permissions": ["https://x.com/*", "https://twitter.com/*", "https://raw.githubusercontent.com/dynaboss1337/Panoptes/main/*"],
+       "host_permissions": ["https://x.com/*", "https://twitter.com/*", "https://dynaboss1337.github.io/Panoptes/*"],
        "content_scripts": [
          {
            "matches": ["https://x.com/*", "https://twitter.com/*"],
