--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
        "name": "Panoptes",
        "version": "0.2",
        "description": "Highlights subversive accounts on X.",
-       "permissions": ["activeTab", "storage"],
+       "permissions": ["activeTab", "storage", "notifications"],
        "host_permissions": ["https://x.com/*", "https://twitter.com/*", "https://dynaboss1337.github.io/Panoptes/*"],
        "content_scripts": [
          {
